[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.12.1",
    "bpython>=0.26",
    "drawtree>=0.1.2",
    "ipython>=9.4.0",
    "jupyterlab[all]>=4.3.5",
    "matplotlib>=3.11.0",
    "networkx>=3.4.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "prettytable[all]>=3.17.0",
    "ptpython>=3.0.32",
    "pygraphviz>=2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
